added optional indexing for reference genome

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,9 +9,14 @@ params {
   samples = 'samples.tsv'
   design = 'design.tsv'
   outdir  = 'results'
-  salmon_index = '/path/to/salmon/index'
-  star_index   = '/path/to/star/index'   // directory created by STAR --runMode genomeGenerate
-  gtf          = '/path/to/annotation.gtf'
+
+  // references
+  fasta   = 'reference/dummy_reference.fa.gz'
+  gtf     = 'reference/dummy_reference.gtf.gz'
+
+  // indices (leave empty to auto-generate)
+  salmon_index = null
+  star_index   = null
 }
 
 profiles {
