--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 process {
   executor = 'local'
-  cpus = 4
-  memory = '8 GB'
+  cpus = 2
+  memory = '4 GB'
 }
 
 
@@ -24,6 +24,6 @@ profiles {
     process.conda = 'envs/rnaseq.yml'
   }
   docker {
-    docker.enabled = true
+    docker.enabled = false
   }
 }
