fixed environment yaml bug

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,8 @@ params {
 
 profiles {
   conda {
-    process.conda = 'envs/rnaseq.yml'
+    conda.enabled = true
+    conda.useMicromamba = true
   }
   docker {
     docker.enabled = false
